terraform/security_group.tf
resource "aws_security_group" "alb_sg" {
  vpc_id = aws_vpc.vpc_0.id
  name   = "alb_sg"

  ######## outbound rules ########
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ######## inbound rules ########
  # only allow HTTP and HTTPS on load balancer
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "instance_sg" {
  vpc_id = aws_vpc.vpc_0.id
  name   = "instance_sg"

  ######## outbound rules ########
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ######## inbound rules ########
  # only allow incoming traffic from security_group
  ingress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    security_groups = [aws_security_group.alb_sg.id]
  }
}
